fix: 잘못된 경로 패턴 식 변경 및 문법적 오류 해결