@@ -6,19 +6,28 @@ import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
+import hobbiedo.user.auth.global.config.jwt.LoginFilter;
+import lombok.RequiredArgsConstructor;
+
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 	@Value("${hobbie-do.front-url}")
 	private static String FRONT_URL;
+
+	private final AuthenticationConfiguration authenticationConfiguration;
 
 	private static CorsConfigurationSource getCorsConfigurationSource() {
 		return request -> {
@@ -27,7 +36,7 @@ public class SecurityConfig {
 			config.setAllowCredentials(true);
 			config.setAllowedMethods(List.of("GET", "POST"));
 			config.setAllowedHeaders(Collections.singletonList("*"));
-			config.setAllowedOrigins(List.of(FRONT_URL));
+			config.setAllowedOrigins(Collections.singletonList(FRONT_URL));
 			config.setMaxAge(3600L);
 			config.setExposedHeaders(Collections.singletonList("Authorization"));
 
@@ -44,7 +53,7 @@ public class SecurityConfig {
 
 		http
 			.authorizeHttpRequests(auth -> auth
-				.requestMatchers("**/*login", "**/*sign-up").permitAll()
+				.requestMatchers("/login/**", "/sign-up/**").permitAll()
 				.anyRequest().authenticated());
 
 		/* JWT 토큰 방식을 위해 Session 방식 차단 */
